plugins {
    id("java")
    id('org.jetbrains.intellij') version '1.16.1'
}

group 'io.github.newhoo.restkit'
version '2024.8.8'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
    implementation 'org.apache.commons:commons-text:1.12.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

intellij {
    pluginName.set('RESTKit')
    version.set('2023.3')
    type.set("IC")
    updateSinceUntilBuild.set(false)
    downloadSources.set(true)
    plugins.set(['java'])
//    plugins.set('java, Kotlin'.split(',').map(String::trim).filter(String::isNotEmpty))
    sandboxDir.set("${rootProject.rootDir}/idea-sandbox")
}